--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://louk-lang.org",
   "private": true,
   "devDependencies": {
+    "cson": "^5.1.0",
+    "plist": "^3.0.1",
     "simple-plist": "^0.3.0",
     "yamljs": "^0.3.0"
   }
