Factor out build logic and switch to Multigrain

--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
   "homepage": "https://louk-lang.org",
   "private": true,
   "devDependencies": {
-    "cson": "^5.1.0",
-    "merge": "^1.2.0",
-    "plist": "^3.0.1",
-    "simple-plist": "^0.3.0",
-    "yamljs": "^0.3.0"
-  }
+    "multigrain": "^0.1.1",
+    "merge": "^1.2.0"
+  },
+  "dependencies": {}
 }
