--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "private": true,
   "devDependencies": {
     "multigrain": "^0.1.1",
-    "merge": "^1.2.0"
+    "merge": "^1.2.0",
+    "gulp": "^4.0.0"
   },
   "dependencies": {}
 }
