Change dist directories to separate repo folders

--- a/src/editors.toml
+++ b/src/editors.toml
@@ -2,12 +2,12 @@
 format = "cson"
 file = "louk.cson"
 previewDir = "../../.atom/packages/language-louk/"
-distDir = "dist/atom/"
+distDir = "../language-louk/"
 grammarSubdir = "grammars/"
 
 [sublime]
 format = "plist"
 file = "louk.tmLanguage"
 previewDir = "../../Library/Application Support/Sublime Text 3/Packages/User/"
-distDir = "dist/sublime/"
+distDir = "../louk-syntax/"
 grammarSubdir = ""
