--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "devDependencies": {
     "multigrain": "^0.1.1",
     "merge": "^1.2.0",
-    "gulp": "^4.0.0"
+    "gulp": "^4.0.0",
+    "recursive-copy": "^2.0.9"
   },
-  "dependencies": {}
+  "dependencies": {
+  }
 }
