--- a/staging/atom/package.json
+++ b/staging/atom/package.json
@@ -1,1 +1,1 @@
-{"version":"0.0.1","description":"Syntax highlighting for Louk language","license":"MIT","repository":"https://github.com/agorischek/louk-grammar.git","keywords":["vue"],"name":"language-louk","engines":{"atom":">=1.0.0 <2.0.0"},"dependencies":{}}
+{"version":"0.0.1","description":"Syntax highlighting for Louk language","license":"MIT","keywords":["vue"],"name":"language-louk","repository":"https://github.com/louk-lang/louk-editor-atom.git","engines":{"atom":">=1.0.0 <2.0.0"},"dependencies":{}}
