--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "louk-grammar",
-  "version": "0.0.1",
+  "version": "0.0.6",
   "description": "Syntax highlighting for Louk",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agorischek/louk-grammar.git"
+    "url": "https://github.com/agorischek/louk-grammar.git"
   },
   "keywords": [
     "Vue",
@@ -22,11 +22,10 @@
   "homepage": "https://louk-lang.org",
   "private": true,
   "devDependencies": {
-    "multigrain": "^0.1.1",
-    "merge": "^1.2.0",
+    "fs-sync": "^1.0.6",
     "gulp": "^4.0.0",
-    "recursive-copy": "^2.0.9"
+    "merge": "^1.2.0",
+    "multigrain": "^0.1.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
