--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://louk-lang.org",
   "private": true,
   "devDependencies": {
+    "clone": "^2.1.2",
     "fs-sync": "^1.0.6",
     "gulp": "^4.0.0",
     "merge": "^1.2.0",
