--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "fs-sync": "^1.0.6",
     "gulp": "^4.0.0",
     "merge": "^1.2.0",
-    "multigrain": "^0.1.1"
+    "multigrain": "^0.1.1",
+    "archiver": "^3.0.0"
   },
   "dependencies": {}
 }
