--- a/source/packages.yaml
+++ b/source/packages.yaml
@@ -13,3 +13,8 @@ atom:
   dependencies: {}
 sublime:
   name: louk-syntax
+textmate:
+  name: Louk
+  contactEmailRot13: alex.gorischek@gmail.com
+  contactName: Alex Gorischek
+  uuid: D60CC376-8007-47D3-8231-5E3B5C6963BB
