--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "homepage": "https://louk-lang.org",
   "private": true,
   "devDependencies": {
+    "archiver": "^3.0.0",
     "clone": "^2.1.2",
+    "del": "^3.0.0",
+    "fs-extra": "^7.0.0",
     "fs-sync": "^1.0.6",
     "gulp": "^4.0.0",
+    "gulp-zip": "^4.2.0",
     "merge": "^1.2.0",
-    "multigrain": "^0.1.1",
-    "archiver": "^3.0.0"
+    "multigrain": "^0.1.1"
   },
   "dependencies": {}
 }
