Add del package

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "archiver": "^3.0.0",
     "chai": "^4.2.0",
     "clone": "^2.1.2",
+    "del": "^3.0.0",
     "fs-extra": "^7.0.0",
     "gulp": "^4.0.0",
     "gulp-mocha": "^6.0.0",
