--- a/source/editors.toml
+++ b/source/editors.toml
@@ -14,6 +14,8 @@ previewDir = "../../Library/Application Support/Sublime Text 3/Packages/User/"
 distDir = "../louk-editor-sublime/"
 grammarFile = "louk.tmLanguage"
 grammarSubdir = ""
+settingsFile = "Settings.tmPreferences"
+settingsSubdir = ""
 bundle = ""
 
 [textmate]
