--- a/source/packages.yaml
+++ b/source/packages.yaml
@@ -12,7 +12,7 @@ atom:
     atom: ">=1.0.0 <2.0.0"
   dependencies: {}
 sublime:
-  name: louk-syntax
+  name: Louk
 textmate:
   name: Louk
   contactEmailRot13: alex.gorischek@gmail.com
