--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://louk-lang.org",
   "private": true,
   "devDependencies": {
+    "apposite": "0.0.2",
     "archiver": "^3.0.0",
     "chai": "^4.2.0",
     "clone": "^2.1.2",
