Set comment settings for VSCode

--- a/source/settings.yaml
+++ b/source/settings.yaml
@@ -11,10 +11,5 @@ sublime:
       - name: TM_COMMENT_START
         value: //
 vscode:
-  contributes:
-    languages:
-    - id: markdown
-    grammars:
-    - language: markdown
-      scopeName: text.html.vue.louk
-      path: ./syntaxes/louk.tmLanguage.json
+  comments:
+    lineComment: "//"
