--- a/staging/atom/package.json
+++ b/staging/atom/package.json
@@ -5,6 +5,8 @@
 	"keywords": [
 		"vue"
 	],
+	"author": "Alex Gorischek",
+	"homepage": "https://louk-lang.org",
 	"name": "language-louk",
 	"repository": "https://github.com/louk-lang/louk-editor-atom.git",
 	"engines": {
