Add icon to vscode metadata

--- a/source/packages.yaml
+++ b/source/packages.yaml
@@ -23,6 +23,7 @@ textmate:
 vscode:
     name: louk
     displayName: Louk
+    icon: assets/logo.png
     publisher: louk-lang
     engines:
       vscode: "^1.0.0"
