--- a/source/packages.yaml
+++ b/source/packages.yaml
@@ -15,11 +15,17 @@ atom:
   dependencies: {}
 sublime:
   name: Louk
+  repository:
+    type: git
+    url: https://github.com/louk-lang/louk-editor-sublime
 textmate:
   name: Louk
   contactEmailRot13: alex.gorischek@gmail.com
   contactName: Alex Gorischek
   uuid: D60CC376-8007-47D3-8231-5E3B5C6963BB
+  repository:
+    type: git
+    url: https://github.com/louk-lang/louk-editor-textmate
 vscode:
     name: louk
     displayName: Louk
