--- a/source/packages.yaml
+++ b/source/packages.yaml
@@ -27,23 +27,26 @@ textmate:
     type: git
     url: https://github.com/louk-lang/louk-editor-textmate
 vscode:
-    name: louk
-    displayName: Louk
-    icon: assets/logo.png
-    publisher: louk-lang
-    engines:
-      vscode: "^1.0.0"
-    categories:
-    - Programming Languages
-    contributes:
-      languages:
-      - id: louk
-        aliases:
-        - Louk
-        extensions:
-        - ".louk"
-        configuration: "./language-configuration.json"
-      grammars:
-      - language: louk
-        scopeName: text.html.vue.louk
-        path: "./syntaxes/louk.tmLanguage.json"
+  name: louk
+  repository:
+    type: git
+    url: https://github.com/louk-lang/louk-editor-vscode
+  displayName: Louk
+  icon: assets/logo.png
+  publisher: louk-lang
+  engines:
+    vscode: "^1.0.0"
+  categories:
+  - Programming Languages
+  contributes:
+    languages:
+    - id: louk
+      aliases:
+      - Louk
+      extensions:
+      - ".louk"
+      configuration: "./language-configuration.json"
+    grammars:
+    - language: louk
+      scopeName: text.html.vue.louk
+      path: "./syntaxes/louk.tmLanguage.json"
