Add VS Code auto-closing settings

--- a/source/settings.yaml
+++ b/source/settings.yaml
@@ -13,3 +13,18 @@ sublime:
 vscode:
   comments:
     lineComment: "//"
+  brackets:
+  - ["{", "}"]
+  - ["[", "]"]
+  - ["(", ")"]
+  autoClosingPairs:
+  - ["{", "}"]
+  - ["[", "]"]
+  - ["(", ")"]
+  - ["'", "'"]
+  surroundingPairs:
+  - ["{", "}"]
+  - ["[", "]"]
+  - ["(", ")"]
+  - ["\"", "\""]
+  - ["'", "'"]
