--- a/staging/sublime/package.json
+++ b/staging/sublime/package.json
@@ -1,11 +1,15 @@
 {
-	"version": "0.0.7",
-	"description": "Syntax highlighting for Louk language",
-	"license": "MIT",
-	"keywords": [
-		"vue"
-	],
-	"author": "Alex Gorischek",
-	"homepage": "https://louk-lang.org",
-	"name": "Louk"
+  "version": "0.0.8",
+  "description": "Syntax highlighting for Louk language",
+  "license": "MIT",
+  "keywords": [
+    "vue"
+  ],
+  "author": "Alex Gorischek",
+  "homepage": "https://louk-lang.org",
+  "name": "Louk",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/louk-lang/louk-editor-sublime"
+  }
 }
